# lednik

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bench/forward_testing/: run.py
bench/forward_testing/results/: metrics.jsonl
bench/load_testing/: run.py
bench/load_testing/results/: metrics.jsonl
bench/mteb/: __init__.py  model_wrapper.py  run.py
bench/mteb/results/: metrics.jsonl  metrics_fixed.jsonl  mteb_metrics.jsonl
bench/mteb_testing/: model_wrapper.py  run.py
bench/mteb_testing/results/: metrics.jsonl
configs/: distill_config.yaml  training_settings.yaml
configs/classification/: train_config.yaml  training_settings.yaml
configs/finetuning/: distill_config.yaml  train_config.yaml  training_settings.yaml
docker/: buildFlashAttention.Dockerfile  serving.Dockerfile  training.Dockerfile
docs/: README.md  model_initialization.md  training_with_clearml.md  training_without_clearml.md  usage.md
docs/jmlc/: README.md  ai_tooling.md  data_science.md  engineering.md  product.md
eda_utils/synt_generation/: __init__.py  callbacks.py  generator.py  structures.py  utils.py
lednik/: dist_utils.py  emb_utils.py  path_utils.py
lednik/distill/: collator.py  configs.py  dim_reduction.py  distillation.py  emb_utils.py  embedding_extraction.py  extraction_utils.py  model_factory.py  param_groups.py  postprocessing.py  tokenizer_utils.py  training_module.py
lednik/distill/layers/: dino_head.py
lednik/distill/losses/: __init__.py  dino.py
lednik/distill/postprocessing/: pca.py
lednik/distill/train/: configs.py  dist_utils.py
lednik/distill/train/training_modules/: __init__.py  post_train.py
lednik/distill/training/: configs.py  dist_utils.py  knn.py
lednik/distill/training/layers/: __init__.py  dino_head.py
lednik/distill/training/losses/: dino.py
lednik/distill/training/train_modules/: post_train_module.py
lednik/distill/training/training_modules/: __init__.py  classifier_train.py  distillation.py  finetuning.py
lednik/distill/validation/: __init__.py  configs.py  contracts.py  dispatcher.py  logger.py  runner.py  utils.py  worker.py
lednik/distill/validation/metrics/: __init__.py  knn.py  logreg.py  mmr.py  mrr.py
lednik/distill/validation/runtime/: __init__.py  dispatcher.py  worker.py
lednik/distill/validation/structs/: __init__.py  configs.py  contracts.py
lednik/initialization/: factory.py  generic.py  tokenizer_utils.py
lednik/models/: __init__.py  auto.py  base.py  configuration_lednik.py  configuration_static.py  modeling_lednik.py  modeling_static.py  outputs.py
lednik/serving/: api.py  server.py
lednik/static_embeddings/: __init__.py  config.py  modeling.py  outputs.py
lednik/utils/: logging.py
pipelines/: utils.py
pipelines/classifier_training/: configs.py  datamodule.py  run.py  task.py
pipelines/distill/: configs.py  datamodule.py  run.py
pipelines/finetuning/: configs.py  datamodule.py  run.py  task.py
scripts/finetuning/: configs.py  task.py
tests/: test_auto.py  test_collator.py  test_configs.py  test_path_utils.py  test_static_model.py  test_unpad.py
train/lednik/finetuning/: config.py  configs.py  datamodule.py  task.py
types/torch/nn/modules/: module.pyi
