[project]
name = "lednik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=1.12.0",
  "flash-attn>=2.8.3",
  "kostyl-toolkit[ml]>=0.1.41",
  "liger-kernel>=0.6.4",
  "loguru>=0.7.3",
  "matplotlib>=3.10.8",
  "pydantic>=2.12.3",
  "scikit-learn>=1.7.2",
  "torch>=2.10.0",
  "torchao>=0.15.0",
  "tqdm>=4.67.1",
  "transformers>=4.57.1",
]

[dependency-groups]
dev = [
  "ipywidgets>=8.1.8",
  "jupyter>=1.1.1",
  "ninja>=1.13.0",
  "pandas>=2.3.3",
  "polars>=1.35.2",
  "pre-commit>=4.3.0",
  "pyarrow>=22.0.0",
]
distill = [
  "clearml[s3]>=2.1.3",
  "click>=8.3.1",
  "datasets>=4.4.1",
  "faiss-cpu>=1.13.2",
  "lightning>=2.5.6",
  "pacmap>=0.9.1",
  "plotly>=6.5.0",
  "qdrant-client>=1.17.1",
  "tensorboard>=2.20.0",
  "torchmetrics>=1.8.2",
]
logprob-woker = [
    "redis>=7.4.0",
]
serving = ["click>=8.3.1", "litserve>=0.2.16", "rich>=14.2.0"]
validation = [
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
]

[tool.uv]
default-groups = ["dev", "distill"]
no-build-isolation-package = ["flash-attn"]

[tool.pyright]
typeCheckingMode = "off"                                                  # "off" | "basic" | "standard" | "strict"

[tool.pyrefly]
project-excludes = [
  "**/node_modules",
  "**/__pycache__",
  "**/.mypy_cache/**",
  "**/.pytest_cache/**",
  "**/.ruff_cache/**",
  "**/.tox/**",
  "**/dist/**",
  "**/build/**",
]
python-platform = "linux"
python-interpreter-path = ".venv/bin/python3"

[tool.ruff]
[tool.ruff.lint]
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "migrations",
  "notebooks",
  "tests",
]

select = [
  "ANN", # Enforce type annotations
  "C90", # Enforce maximum cyclomatic complexity
  "D",   # Enforce docstrings
  "NPY", # Enforce numpy style
  "E",   # Pycodestyle formatting errors
  "F",   # Pyflakes logic errors
  "B",   # Flake8-bugbear suspicious code patterns
  "UP",  # Pyupgrade modern Python syntax
  "N",   # Pep8-naming correct class/function names
  "S",   # Flake8-bandit security issues
  "C4",  # Flake8-comprehensions better comprehensions
  "T20", # Flake8-print forbid debug print statements
  "TID", # Flake8-tidy-imports forbid relative imports
  "A",   # Flake8-builtins avoid shadowing built-ins
  "PTH", # Flake8-use-pathlib prefer pathlib over os.path
  "RUF", # Ruff-specific rules
  "Q",   # quotes checks
  "PERF", # Performance checks
  "SIM", # Simplicity checks
  "I",   # Import checks
]

ignore = [
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
  "I001",   # isort found an import in the wrong position
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D203",   # 1 blank line required before class docstring
  "D212",   # Multi-line docstring summary should start at the first line
  "D401",   # First line of docstring should be in imperative mood
  "E501",   # Line too long
  "N806",   # Variable in function should be lowercase
  "N803",   # Argument name should be lowercase
  "N812",   # Import alias should be lowercase
  "N817",   # CamelCase import aliased as acronym
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src", "app", "core", "lednik"]
combine-as-imports = false
force-single-line = true
lines-after-imports = 2
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
